<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">sRGB Toggle</string>
    <string name="srgb_mode">sRGB Mode</string>
    <string name="toggle">Toggle</string>
    <string name="about">About</string>
    <string name="srgb_toggle_version">SRGB Toggle version</string>
    <string name="version">1.0</string>
    <string name="settings">Settings</string>
    <string name="developer">Developer</string>
    <string name="samme_kleijn">Samme Kleijn</string>
    <string name="sammekl">Sammekl</string>
    <string name="github">GitHub</string>
</resources>
